@@ -1,7 +1,8 @@
 Revision history for Perl extension Net::SSLeay.
 ???
 	Added support for building under Linuxbrew (a linuxbrew version of MacOS Homebrew)
-
+	Patch from Matthew Altus, that implements SSL_CTX_set_psk_client_callback() and SSL_set_psk_client_callback().
+	
 1.81	 2017-03-28
 	Patch from Alexander Bluhm to enable RSA_get_key_parameters with
 	LibreSSL. Again.
